--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
- <script src = 'f1.js'> </script>
+ <script src = "f1.js"> </script>
 </head>
 <body>
     <h1> 테스트를 위한 제목 입력 </h1>
