CSS 이용하여 p의 배경색 변경
배경색 노랑으로 텍스트크기는 20으로 설정

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        p {
+            background: yellow;
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1> 테스트를 위한 제목 입력 </h1>
