마우스 오버시 p태그의 배경색 변경
..

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
             background: yellow;
             font-size: 20px;
         }
+        p :hover
+        {
+
+            background: blue;
+
+        }
     </style>
 </head>
 <body>
